Added photography tab

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -2,3 +2,12 @@
 layout: default
 ---
 
+<h1 class="about-me-title">ABOUT ME</h1>
+
+<img src="">
+
+<div class="about-me-description">
+  <p>Hello! My name is Saeam Kwon and I am currently a 22 year old product designer at Tradecraft. I graduated from University of California, Berkeley this past May with a Bachelor of Arts in cognitive science. I am a fan of minimalist designs to solve problems and overcome obstacles. I am also obsessed with video games, dogs, FRIENDS (TV show and people) and food. Feel free to contact me with inquiries about my work or any of my interests or if you just want to connect!</p>
+</div>
+
+<a href="/contact-me"><button class="button">Connect with me!</button></a>
