--- a/contact-me/index.html
+++ b/contact-me/index.html
@@ -3,7 +3,22 @@ layout: default
 ---
 
 
-<h1 class="contact-title">Contact Me</h1>
+<div id="success" class="hidden">
+  <div class="alert alert-success">
+    <span class="glyphicon glyphicon-send"></span>Success! Message sent.
+  </div>
+</div>
+
+
+<div id="failure" class="hidden">
+  <div class="alert alert-danger">
+    <span class="glyphicon glyphicon-alert"></span>Error! Please check the inputs.
+  </div>
+</div>
+
+<h1 class="contact-title">CONTACT ME</h1>
+
+<p></p>
 
 <script>
   function validateForm() {
@@ -26,22 +41,7 @@ layout: default
 </script>
 
 
-<div id="success" class="hidden">
-  <div class="alert alert-success">
-    <span class="glyphicon glyphicon-send"></span>
-    Success! Message sent.
-  </div>
-</div>
-
-
-<div id="failure" class="hidden">
-  <div class="alert alert-danger">
-    <span class="glyphicon glyphicon-alert"></span>
-    Error! Please check the inputs.
-  </div>
-</div>
-
-<form name="contact-me" method="post" action="http:formspree.io/saeamkwon@gmail.com" onsubmit="validateForm();">
+<form name="contact-me" method="post" action="http://formspree.io/saeamkwon@gmail.com" onsubmit="validateForm();">
   <label>Name</label>
     <input name="name" placeholder="Name">
 
@@ -56,6 +56,6 @@ layout: default
   <input type="hidden" name="_subject" value="New submission!" />
   <input type="hidden" name="_next" value="//site.io/thanks.html" />
 
-  <button type="submit">Submit</button>
+  <button class="button" type="submit">Submit</button>
 </form>
 
